tests/regression/200_COMPILER_FEATURES/220_FLOW_CHECKER/220_005_reject_void_redundant_terminator/expected.txt
error[KORU010]: '_' is only legal as the body of a branch handler
  --> tests/regression/200_COMPILER_FEATURES/220_FLOW_CHECKER/220_005_reject_void_redundant_terminator/input.kz:17:0
    |
 17 | |> _
    | ^
  hint: '_' has meaning only as `| branch [binding] |> _`. Outside a branch handler body — top-level void chain, split-pipeline tail — `|> _` is meaningless.

